<resources>
    <string name="app_name">RecipeApp</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="log_in">Log In</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <string name="submit">submit</string>
    <string name="password">password</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="camera">Camera</string>
    <string name="add_ingredients">Add Ingrediants</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">quantity</string>
</resources>